project/v1.1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  namespace: project-namespace
spec:
  selector:
    matchLabels:
      app: project
  replicas: 1
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-data
          persistentVolumeClaim:
            claimName: project-claim
      containers:
      - name: project-container
        image: santlemp/project:frontend-1.0
        volumeMounts:
          - mountPath: /project-data
            name: project-data
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-deployment
  namespace: project-namespace
spec:
  selector:
    matchLabels:
      app: todos
  replicas: 1
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
      - name: todos-container
        image: santlemp/project:backend-1.0
