project/v1.1/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-service
            port:
              number: 1234
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todos-service
            port:
              number: 80
